Fix overflowed text hiding on mobile

--- a/coupon/static/coupon/css/redeem.css
+++ b/coupon/static/coupon/css/redeem.css
@@ -78,6 +78,7 @@ label {
     border-radius: 0;
     box-shadow: inset 0 1px 0 rgba(0, 0, 0, .1);
     background: #f2f3f6;
+    white-space: nowrap;
 }
 
 input:focus,
